--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Roshan K.
+                        Roshan
                         <span class="text-primary">Jha</span>
                     </h1>
                     <div class="subheading mb-5">
